--- a/index.html
+++ b/index.html
@@ -127,27 +127,29 @@
 
           <!-- Brainstorming Section -->
           <div class="section">
-            <h2>💡 Brainstorming</h2>
+            <h2>💡 Brainstorming & Idea Management</h2>
             <div id="brainstormingSection"></div>
           </div>
 
           <div class="section">
-            <h2>To-Do List</h2>
-            <div class="row">
-              <input id="todoText" class="input" placeholder="Enter new task..."/>
-              <button id="todoAdd" class="btn">➕ Add Task</button>
+            <h2>📝 To-Do List</h2>
+            <div class="card">
+              <div class="row">
+                <input id="todoText" class="input" placeholder="Enter new task..."/>
+                <button id="todoAdd" class="btn">➕ Add Task</button>
+              </div>
+              <div id="todoList" class="todo-list"></div>
             </div>
-            <div id="todoList" class="todo-list"></div>
           </div>
 
           <div class="section">
-            <h2>Weekly To-Do</h2>
+            <h2>📅 Weekly To-Do</h2>
             <div id="weeklyWrap" class="weeks"></div>
           </div>
 
           <!-- Tested Products Section -->
           <div class="section">
-            <h2>🧪 Notes for Tested Products</h2>
+            <h2>🧪 Product Testing Results & Analysis</h2>
             <div id="testedProductsSection"></div>
           </div>
 
