--- a/index.html
+++ b/index.html
@@ -310,6 +310,8 @@
           <th>Ad Cost/Piece</th>
           <th>Delivery Rate</th>
           <th>Avg Order Value</th>
+          <th>Profit/Order</th>
+          <th>Profit/Piece</th>
           <th>Profit</th>
         </tr>
       </thead>
