--- a/product.html
+++ b/product.html
@@ -75,19 +75,19 @@
         <div class="h">💰 Automated Budget Calculation by Country</div>
         <div class="table-scroll">
           <table class="table">
-<thead>
-  <tr>
-    <th>Country</th>
-    <th>Max CPL</th>
-    <th>Available for Profit & Ads</th>
-    <th>Delivery Rate</th>
-    <th>Selling Price</th>
-    <th>Product Cost China</th>
-    <th>Shipping Cost</th>
-    <th>Boxleo/Order</th>
-    <th>Total Cost</th>
-  </tr>
-</thead>
+            <thead>
+              <tr>
+                <th>Country</th>
+                <th>Max CPL</th>
+                <th>Available for Profit & Ads</th>
+                <th>Delivery Rate</th>
+                <th>Selling Price</th>
+                <th>Product Cost China</th>
+                <th>Shipping Cost</th>
+                <th>Boxleo/Order</th>
+                <th>Total Cost</th>
+              </tr>
+            </thead>
             <tbody id="pdPBBBody"></tbody>
           </table>
         </div>
@@ -205,6 +205,8 @@
                 <th>Delivered Orders</th>
                 <th>Refunded Orders</th>
                 <th>Delivered Pieces</th>
+                <th>Profit/Order</th>
+                <th>Profit/Piece</th>
                 <th>Delivery Rate</th>
                 <th>Profit</th>
               </tr>
@@ -225,6 +227,8 @@
                 <th id="pdLPDeliveredOrdersT">0</th>
                 <th id="pdLPRefundedOrdersT">0</th>
                 <th id="pdLPDeliveredPiecesT">0</th>
+                <th id="pdLPProfitOrderT">$0</th>
+                <th id="pdLPProfitPieceT">$0</th>
                 <th id="pdLPDeliveryRateT">0%</th>
                 <th id="pdLPProfitT">0</th>
               </tr>
@@ -373,4 +377,4 @@
 
   <script src="/public/app.js"></script>
 </body>
-</html> 
+</html>
