--- a/product.html
+++ b/product.html
@@ -99,20 +99,20 @@
       <h3>Transit (China → Kenya)</h3>
       <div class="table-scroll">
         <table class="table">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Route</th>
-              <th>Qty</th>
-              <th>Est. Ship Cost</th>
-              <th>Final Ship Cost</th>
-              <th>China Cost</th>
-              <th>Departed</th>
-              <th>Arrived</th>
-              <th>Payment Status</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
+<thead>
+  <tr>
+    <th>ID</th>
+    <th>Route</th>
+    <th>Qty</th>
+    <th>Est. Ship Cost</th>
+    <th>Final Ship Cost</th>
+    <th>China Cost</th>
+    <th>Departed</th>
+    <th>Arrived</th>
+    <th>Payment Status</th>
+    <th>Actions</th>
+  </tr>
+</thead>
           <tbody id="pdShipCKBody"></tbody>
         </table>
       </div>
@@ -122,19 +122,19 @@
       <h3>Transit (Inter-country)</h3>
       <div class="table-scroll">
         <table class="table">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Route</th>
-              <th>Qty</th>
-              <th>Est. Ship Cost</th>
-              <th>Final Ship Cost</th>
-              <th>Departed</th>
-              <th>Arrived</th>
-              <th>Payment Status</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
+   <thead>
+  <tr>
+    <th>ID</th>
+    <th>Route</th>
+    <th>Qty</th>
+    <th>Est. Ship Cost</th>
+    <th>Final Ship Cost</th>
+    <th>Departed</th>
+    <th>Arrived</th>
+    <th>Payment Status</th>
+    <th>Actions</th>
+  </tr>
+</thead>
           <tbody id="pdShipICBody"></tbody>
         </table>
       </div>
@@ -145,22 +145,23 @@
       <h3>Arrived Shipments</h3>
       <div class="table-scroll">
         <table class="table">
-          <thead>
-            <tr>
-              <th>ID</th>
-              <th>Route</th>
-              <th>Qty</th>
-              <th>Est. Ship Cost</th>
-              <th>Final Ship Cost</th>
-              <th>China Cost</th>
-              <th>Departed</th>
-              <th>Arrived</th>
-              <th>Days</th>
-              <th>Payment Status</th>
-              <th>Note</th>
-              <th>Actions</th>
-            </tr>
-          </thead>
+    <thead>
+  <tr>
+    <th>ID</th>
+    <th>Product</th>
+    <th>Route</th>
+    <th>Qty</th>
+    <th>Est. Ship Cost</th>
+    <th>Final Ship Cost</th>
+    <th>China Cost</th>
+    <th>Departed</th>
+    <th>Arrived</th>
+    <th>Days</th>
+    <th>Payment Status</th>
+    <th>Note</th>
+    <th>Actions</th>
+  </tr>
+</thead>
           <tbody id="pdArrivedBody"></tbody>
         </table>
       </div>
