--- a/public/car/index.html
+++ b/public/car/index.html
@@ -1,8 +1,6 @@
-<!DOCTYPE html>
-<html>
 <head>
     <base href="https://funnel.gohomie.co.uk/">
- data-n-head-ssr>
+    <script>(function(w,i,g){w[g]=w[g]||[];if(typeof w[g].push=='function')w[g].push(i)})
   <head ><script>(function(w,i,g){w[g]=w[g]||[];if(typeof w[g].push=='function')w[g].push(i)})
 (window,'GTM-P9QM69S','google_tags_first_party');</script><script>(function(w,d,s,l){w[l]=w[l]||[];(function(){w[l].push(arguments);})('set', 'developer_id.dY2E1Nz', true);
 		var f=d.getElementsByTagName(s)[0],
